--- a/unidad 2/(4) Tablas/tablas.html
+++ b/unidad 2/(4) Tablas/tablas.html
@@ -4,11 +4,16 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Ejercicio formatear tabla</title>
 	<style>
-		/* Añadir estilos de tablas */
+		.cabecera{
+			background-color: antiquewhite;
+		}
+		.dolar td{
+			background-color: yellow;
+		}
 	</style>
 </head>
 <body>
-	<table summary="Tipos de cambio">
+	<table summary="Tipos de cambio" border="">
 		<thead>
 			<tr class="cabecera">
 				<th scope="col">Cambio</th>
