--- a/unidad 2/(4) Tablas/tablas.html
+++ b/unidad 2/(4) Tablas/tablas.html
@@ -7,13 +7,22 @@
 		.cabecera{
 			background-color: antiquewhite;
 		}
-		.dolar td{
+		.par{
 			background-color: yellow;
 		}
+		table{
+			border: 1px solid;
+		}
+		img{
+			height: auto;
+			width: auto;
+			
+		}
+
 	</style>
 </head>
 <body>
-	<table summary="Tipos de cambio" border="">
+	<table summary="Tipos de cambio" >
 		<thead>
 			<tr class="cabecera">
 				<th scope="col">Cambio</th>
@@ -25,28 +34,28 @@
 		</thead>
 		<tbody>
 			<tr class="par">
-				<th scope="row" class="euro">Euro/Dolar</th>
+				<th scope="row" class="euro"><img src="imagenes/euro.png" alt="">Euro/Dolar</th>
 				<td>1.2524</td>
 				<td>1.2527</td>
 				<td>1.2539</td>
 				<td>1.2488</td>
 			</tr>
 			<tr>
-				<th scope="row" class="dolar">Dolar/Yen</th>
+				<th scope="row" class="dolar"><img src="imagenes/dolar.png" alt="">Dolar/Yen</th>
 				<td>119.01</td>
 				<td>119.05</td>
 				<td>119.82</td>
 				<td>119.82</td>
 			</tr>
 			<tr class="par">
-				<th scope="row" class="libra">Libra/Dolar</th>
+				<th scope="row" class="libra"><img src="imagenes/libra.png" alt="">Libra/Dolar</th>
 				<td>1.8606</td>
 				<td>1.8611</td>
 				<td>1.8651</td>
 				<td>1.8522</td>
 			</tr>
 			<tr>
-				<th scope="row" class="yen">Yen/Euro</th>
+				<th scope="row" class="yen"><img src="imagenes/yen.png" alt="">Yen/Euro</th>
 				<td>0.6711</td>
 				<td>0.6705</td>
 				<td>0.6676</td>
