--- a/unidad 2/(8) Modelo de cajas/cajas.html
+++ b/unidad 2/(8) Modelo de cajas/cajas.html
@@ -5,6 +5,22 @@
 	<title>HTML &amp; CSS: Curso práctico avanzado</title>
 	<style>
 		/* Editar CSS aquí o en archivo externo */
+		h1{
+			border: thin solid;
+			border-color: blue;
+			border-width: 3px;
+		}
+		h2{
+			border: thin solid;
+			border-color: gray;
+			border-width: 2px;
+		}
+		ul{
+			border: thin solid;
+			border-color: greenyellow;
+			border-width: 2px;
+		}
+		
 	</style>
 </head>
 <body>
