--- a/unidad 2/(10) Posicionamiento/posicionamiento.html
+++ b/unidad 2/(10) Posicionamiento/posicionamiento.html
@@ -21,22 +21,27 @@
 
 		#posicionamiento1 {
 			/* Añadir propiedades de posicionamiento */
+			position: absolute;
 			width: 100%;
 			height: 1px;
 			border-top: 1px dashed #CCCCCC;
-			
+
 		}
 
 		div#posicionamiento2 {
 			/* Añadir propiedades de posicionamiento */
+			position: absolute;
+
 			width: 1px;
 			height: 100%;
 			border-left: 1px dashed #CCCCCC;
-			
+
 		}
 
 		div#posicionamiento3 {
 			/* Añadir propiedades de posicionamiento */
+			position: absolute;
+
 			border: 2px solid blue;
 			top: 0;
 			left: 0%;
@@ -44,6 +49,8 @@
 
 		div#posicionamiento4 {
 			/* Añadir propiedades de posicionamiento */
+			position: absolute;
+
 			border: 2px solid green;
 			bottom: 0;
 			left: 0;
@@ -51,6 +58,8 @@
 
 		div#posicionamiento5 {
 			/* Añadir propiedades de posicionamiento */
+			position: absolute;
+
 			border: 2px solid red;
 			top: 50%;
 			left: 50%;
@@ -58,6 +67,8 @@
 
 		div#posicionamiento6 {
 			/* Añadir propiedades de posicionamiento */
+			position: absolute;
+
 			border: 2px solid orange;
 			bottom: 50%;
 			right: 50%;
@@ -65,6 +76,8 @@
 
 		div#posicionamiento7 {
 			/* Añadir propiedades de posicionamiento */
+			position: absolute;
+
 			border: 2px solid pink;
 			top: 50%;
 			right: 0;
@@ -72,6 +85,8 @@
 
 		div#posicionamiento8 {
 			/* Añadir propiedades de posicionamiento */
+			position: absolute;
+
 			border: 2px solid lime;
 			top: 70px;
 			left: 100px;
@@ -79,6 +94,8 @@
 
 		div#posicionamiento9 {
 			/* Añadir propiedades de posicionamiento */
+			position: absolute;
+
 			border: 2px solid cyan;
 			top: 25%;
 			right: 25%;
@@ -86,13 +103,15 @@
 
 		div#posicionamiento10 {
 			/* Añadir propiedades de posicionamiento */
+			position: absolute;
+
 			width: 28em;
 			height: 28em;
 			border: 2px solid cyan;
 			padding: 3px;
 			top: 50%;
 			right: 50%;
-			transform:translate(50%,-50%) ;
+			transform: translate(50%, -50%);
 		}
 	</style>
 </head>
